# light-operator

./: .containerignore  .gitignore  Cargo.toml  Containerfile  LICENSE  README.md  RELEASE-CHECKLIST.md  config.yaml
.github/workflows/: image-release.yml  main.yml
charts/light-operator/: .helmignore  Chart.yaml  values.yaml
charts/light-operator/crds/: crd.yaml
charts/light-operator/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  rbac.yaml  secret.yaml  serviceaccount.yaml
scripts/: build_container_images.sh
src/: config.rs  health_check.rs  lib.rs
src/kubernetes/: controller.rs  crd.rs
src/smarthome/: mod.rs  smartthings.rs
