[package]
name = "light-operator"
version = "0.2.0"
edition = "2021"

[profile.release]
strip = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
async-trait = "0.1.73"
config = { version = "0.14.0", features = ["yaml"], default-features = false }
futures = "0.3.28"
axum = { version = "0.7.1", default-features = false, features = ["http1", "tokio"] }
k8s-openapi = { version = "0.21.0", features = ["v1_27"] }
kube = { version = "0.88.0", features = ["derive", "runtime"] }
reqwest = { version = "0.11.20", default-features = false, features = ["gzip", "json", "rustls-tls"] }
schemars = "0.8.13"
serde = { version = "1.0.188", features = ["derive"] }
serde_flat_path = "0.1.2"
serde_json = "1.0.105"
serde_yaml = "0.9.25"
thiserror = "1.0.48"
time = { version = "0.3.28", features = ["serde", "serde-well-known"] }
tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
uuid = "1.4.1"
